# csv-to-llm

./: .gitignore  MANIFEST.in  README.md  csv-to-llm.py  pyproject.toml  requirements.txt  setup.py  setup.sh
.github/: dependabot.yml
.github/workflows/: codeql.yml  python-package.yml
apps_script/: Code.gs  README.md  appsscript.json
csv_to_llm/: __init__.py  auto.py  cli.py  core.py  embeddings.py
docs/: LEARNINGS.md
examples/: email_category_model.py  email_classification_broad_model.py  sample_prompt.txt
scripts/: run_tests.sh  setup.sh
tests/: __init__.py  test_csv_to_llm.py
